# LecturesProject_Example

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  evil file.txt  index.html  nginx.conf  up_server.sh
.github/workflows/: cmake-test.yml
data/: conv_kernels.txt  fc_biases.txt  fc_weights.txt
docker/: Dockerfile.builder  Dockerfile.nginx  Dockerfile.server  Dockerfile.web
include/: ConvNet.h  Preprocessing.h
src/: CMakeLists.txt  ConvNet.cu  Preprocessing.cpp  PreprocessingTest.cpp  backend.cpp  server.cpp
utils/: local_test.cpp  test_server_local.py
